# docs/swagger/swagger.yaml
@@ -116,6 +116,8 @@ definitions:
         type: string
       sasl-mechanism:
         type: string
+      sasl-oauth-audience:
+        type: string
       sasl-oauth-client-id:
         type: string
       sasl-oauth-client-secret:
@@ -703,6 +705,8 @@ definitions:
       sasl_gssapi_user:
         type: string
       sasl_mechanism:
+        type: string
+      sasl_oauth_audience:
         type: string
       sasl_oauth_client_id:
         type: string
